Major codebase cleanup and improvements
- Enhanced error handling with retry mechanisms and circuit breaker patterns
- Improved thread safety with concurrent collections and atomic operations
- Added comprehensive validation utilities and debug logging
- Implemented new KingdomsX hook for PvP conflict resolution
- Refactored game managers for better separation of concerns
- Updated documentation and README with integration details
- Enhanced arena management with better configuration handling
- Improved chest and loot management systems
- Added proper resource cleanup and memory management
- Updated .gitignore to exclude Codacy analysis files
- Removed PMD results file from repository